# auto-judge-evaluate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: META_WATCH_HOWTO.md  meta-watch.sh
src/autojudge_evaluate/: __init__.py  __main__.py  correlation_diagnostics.py  evaluation.py  nugget_doc_eval.py  pyircore.py
src/autojudge_evaluate/_commands/: _eval_result.py  _leaderboard.py  _meta_evaluate.py  _qrel_evaluate.py
src/autojudge_evaluate/analysis/: correlation_table.py  judges.yml
src/autojudge_evaluate/eval_results/: __init__.py  builder.py  eval_result.py  io.py  verification.py
tests/: __init__.py  test_correlations.py  test_eval_results.py  test_eval_results_io.py  test_evaluation.py  test_evaluation_interface.py  test_leaderboard_interface.py  test_nugget_doc_eval.py  test_pyircore.py  test_tau_ap_correlations.py
